UI Issues Fixed

--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -3,7 +3,7 @@ Author(s): ViSolve 03/01/2019
 001: Responsive Datatable with pagination. 
  -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,15 +14,18 @@ Author(s): ViSolve 03/01/2019
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
+<link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+	<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
     <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
+    <script src="resources/jquery.dataTables.min.js"></script>
+    <script src="resources/dataTables.bootstrap4.min.js"></script>
     <script src="resources/navbar.js"></script>
     <script src="resources/certified.js"></script>
     <script src="resources/bootstrap.min.js"></script>
-   	<script src="resources/jquery.dataTables.min.js"></script>
-    <script src="resources/dataTables.bootstrap4.min.js"></script>
+  	
 </head>
 <body>
    <div id="topnav"></div>
