--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -37,14 +37,14 @@ Description: A new Responsive Template for login
 	    <h3 class="text-center sub-heading translate" data-i18n="Welcome Back">Welcome Back</h3>		
 		<div class="form-group">
 			<div class="wrap">
-				 <form>
+				 <form onsubmit="return false">
 			  		<p class="validateTips"></p>
 				    <div class="row">
-				      <input type="text" class="form-control custom-input" name="login-username" id="login-username" required>
+				      <input type="text" class="form-control custom-input" name="login-username" id="login-username">
 				      <label class= "custom-label translate" for="login-username" data-i18n="Username">Username</label>
 				    </div>
 				    <div class="row">
-				      <input type="password" class="form-control custom-input"  name="login-password" id="login-password" required>
+				      <input type="password" class="form-control custom-input"  name="login-password" id="login-password">
 				      <label class= "custom-label translate" data-i18n="Password" for="login-password">Password</label>
 				    </div>
 				    <!-- 002 starts here -->
