--- a/WebContent/pwresetsuccess.html
+++ b/WebContent/pwresetsuccess.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
+
+    <link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+	<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
+    
     <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
