--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -18,6 +18,8 @@ Description: A new Responsive Template to receive the user inputs during Signup.
     <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+	<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
