--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -16,6 +16,8 @@ Author(s): ViSolve 03/01/2019
     <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
+<link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+	<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script> 
     <script src="resources/jquery.jui_dropdown.min.js"></script>
@@ -74,7 +76,7 @@ Author(s): ViSolve 03/01/2019
     </div>
     <div id="resetsurvey" title="Reset Survey">
       <form>
-    <span class="translate" data-i18n="reset_survey_content">This will delete all answers and start a new survey with the latest survey version.  Are you sure you want to continue? </span>
+    <span class="translate" data-i18n="reset_Questionnaire_content">This will delete all answers and start a new Questionnaire with the latest Questionnaire version.  Are you sure you want to continue? </span>
         <fieldset>
             <table style="width: 100%">
                 <tr>
