--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,9 +1,11 @@
 
+<script src="resources/lib/url/url.min.js"></script>  
 <script src="resources/i18next.min.js" ></script>
 <script src="resources/jquery-i18next.min.js" ></script>
 <script src="resources/i18nextXHRBackend.js"></script>
-<script src="resources/lib/url/url.min.js"></script>  
 <script src="resources/global.js"></script>    
+<link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
 
 <nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
 	<div class="container container_padding ">
