--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -52,10 +52,10 @@ Author(s): ViSolve 03/01/2019
     	<div class="row d-flex justify-content-end">
 		    <div class="btn-toolbar d-flex justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
 			  <div class="btn-group mr-2" role="group" aria-label="First group">
-			    <button id="btApprove" type="button" class="btn btn-success"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Approve Selected">Approve Selected</span></button>
+			    <button id="btApprove" type="button" class="btn btn-success status-button  submitted-awaiting-approval-button"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Approve Selected">Approve Selected</span></button>
 			  </div>
 			  <div class="btn-group mr-2" role="group" aria-label="Second group">
-			    <button id="btReject" type="button" class="btn btn-danger"><i class="fa fa-ban" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Reject Selected">Reject Selected</span></button>
+			    <button id="btReject" type="button" class="btn btn-danger status-button submitted-awaiting-approval-button"><i class="fa fa-ban" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Reject Selected">Reject Selected</span></button>
 			  </div>
 			</div>
 		</div>
@@ -72,7 +72,7 @@ Author(s): ViSolve 03/01/2019
 	<div class="row d-flex justify-content-end">
 	    <div class="btn-toolbar d-flex justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
 		  <div class="btn-group mr-2" role="group" aria-label="First group">
-		    <button id="btUnApprove" type="button" class="btn btn-danger"> <i class="fa fa-ban" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="UnApprove Selected">Unapprove Selected</span></button>
+		    <button id="btUnApprove" type="button" class="btn btn-danger status-button  submitted-approved-button"> <i class="fa fa-ban" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="UnApprove Selected">Unapprove Selected</span></button>
 		  </div>
 		  
 		</div>
@@ -90,7 +90,7 @@ Author(s): ViSolve 03/01/2019
 	    <div class="btn-toolbar d-flex justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
 		   <div id="submitted-rejected-buttons" >
 			  <div class="btn-group mr-2" role="group" aria-label="First group">
-			    <button id="btUnReject" type="button" class="btn btn-success"> <i class="fa fa-check" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="UnReject Selected">Unreject Selected</span></button>
+			    <button id="btUnReject" type="button" class="btn btn-success status-button submitted-rejected-button"> <i class="fa fa-check" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="UnReject Selected">Unreject Selected</span></button>
 			  </div>
 		  </div>
 		</div>
@@ -121,7 +121,7 @@ Author(s): ViSolve 03/01/2019
 				    </div>
 				    <div class="col-md-4 mr-30 d-flex justify-content-center">
 				      <div class="btn-group" role="group" aria-label="second group">
-				        <button id="btUpdateSurvey" type="button" class="btn btn-info mr-bt15" data-toggle="modal" data-target="#UpdateSurveyModal" ><i class="fa fa-refresh"></i> &nbsp;<span class="translate" data-i18n="Update Survey Questions">Update Survey Questions</span></button>
+				        <button id="btUpdateSurvey" type="button" class="btn btn-info mr-bt15 " data-toggle="modal" data-target="#UpdateSurveyModal" ><i class="fa fa-refresh"></i> &nbsp;<span class="translate" data-i18n="Updated Questionnaire">Updated Questionnaire</span></button>
 				      </div>
 				    </div>
 				  </div>
@@ -142,7 +142,7 @@ Author(s): ViSolve 03/01/2019
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title translate" id="exampleModalLabel" data-i18n="Update Survey">Update Survey</h5>
+        <h5 class="modal-title translate" id="exampleModalLabel" data-i18n="Update Questionnaire">Update Questionnaire</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
