Internationalization issues fixed

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -142,7 +142,7 @@ Author(s): ViSolve 03/01/2019
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title translate" id="exampleModalLabel" data-i18n="Update Questionnaire">Update Questionnaire</h5>
+        <h5 class="modal-title translate" id="exampleModalLabel" data-i18n="Update Questionnaire">Updated Questionnaire</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -172,4 +172,5 @@ Author(s): ViSolve 03/01/2019
 <!-- 003 ends here-->
     
 </body>
+ 
 </html>
