--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -69,4 +69,9 @@ Description: A new Responsive Template for login
     
     <div id="footer-outer"></div> 
   </body>
+  <script src="resources/lib/url/url.min.js"></script>  
+<script src="resources/i18next.min.js" ></script>
+<script src="resources/jquery-i18next.min.js" ></script>
+<script src="resources/i18nextXHRBackend.js"></script>
+<script src="resources/global.js"></script>
 </html>
