--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -39,42 +39,42 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 	    <!-- 002 Starts here -->
 		<div class="form-group">
 			<div class="wrap">
-			    <form>
+			    <form onsubmit="return false">
 			  		<p class="validateTips"></p>
 				    <div class="row custom-row">
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="text" name="signup-name" id="signup-name" class="form-control custom-input"  required>
+					    	<input type="text" name="signup-name" id="signup-name" class="form-control custom-input"  >
 				      		<label class= "custom-label translate" data-i18n="Name" for="signup-name">Name</label>
 					    </div>
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="text" name="signup-email" id="signup-email" class="form-control custom-input"  required>
+					    	<input type="text" name="signup-email" id="signup-email" class="form-control custom-input"  >
 				      		<label class= "custom-label translate" data-i18n="Email" for="signup-email">Email</label>
 					    </div>
 				    </div>
 				    <div class="row custom-row">
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="text" name="signup-organization" id="signup-organization" class="form-control custom-input" required>
+					    	<input type="text" name="signup-organization" id="signup-organization" class="form-control custom-input" >
 				      		<label class= "custom-label translate" data-i18n="Organization" for="signup-organization">Organization</label>
 					    </div>
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="text" name="signup-username" id="signup-username" class="form-control custom-input"  required>
+					    	<input type="text" name="signup-username" id="signup-username" class="form-control custom-input"  >
 				      		<label class= "custom-label translate" data-i18n="Username" for="signup-username">Username</label>
 					    </div>
 				    </div>
 				    <div class="row custom-row">
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="password" name="signup-password" id="signup-password" class="form-control custom-input"   required>
+					    	<input type="password" name="signup-password" id="signup-password" class="form-control custom-input"   >
 				      		<label class= "custom-label translate" data-i18n="Password" for="signup-password">Password</label>
 					    </div>
 					    <div class="col-md-6 col-sm-12 custom-col">
-					    	<input type="password" name="signup-passwordverify" id="signup-passwordverify" class="form-control custom-input"   required>
+					    	<input type="password" name="signup-passwordverify" id="signup-passwordverify" class="form-control custom-input"   >
 				      		<label class= "custom-label translate" data-i18n="Re-enter Password" for="signup-passwordverify">Re-enter Password</label>
 					    </div>
 				    </div>
 				    
 				    
 				    <div class="row custom-row">
-				      <textarea rows="3" name="signup-address" id="signup-address" class="form-control custom-input" form="signup-form" required></textarea>
+				      <textarea rows="3" name="signup-address" id="signup-address" class="form-control custom-input" form="signup-form" ></textarea>
 				      <label class= "custom-label translate" data-i18n="Organization Postal Address" for="signup-address">Organization Postal Address</label>
 				    </div>
 				    <div class="row">
