--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -58,5 +58,9 @@ Author(s): ViSolve 03/01/2019
     
   
 </body>
-
+<script src="resources/lib/url/url.min.js"></script>  
+<script src="resources/i18next.min.js" ></script>
+<script src="resources/jquery-i18next.min.js" ></script>
+<script src="resources/i18nextXHRBackend.js"></script>
+<script src="resources/global.js"></script>
 </html>
