--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,5 +1,8 @@
-
-   
+<script src="resources/lib/url/url.min.js"></script>  
+<script src="resources/i18next.min.js" ></script>
+<script src="resources/jquery-i18next.min.js" ></script>
+<script src="resources/i18nextXHRBackend.js"></script>
+<script src="resources/global.js"></script>   
 <link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
 <link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
 
@@ -36,11 +39,11 @@
 </nav> 
 
 <!-- Modal Update Profile -->
-<div class="modal fade" id="updateprofileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="updateprofileModal" tabindex="-1" role="dialog" aria-labelledby="UpdateprofileModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title translate" id="exampleModalLabel" data-i18n="Update Profile">Update Profile</h5>
+        <h5 class="modal-title translate" id="updateprofileModalLabel" data-i18n="Update Profile">Update Profile</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -98,11 +101,11 @@
 
 <!-- Modal Reset Password -->
 
-<div class="modal fade bd-example-modal-sm" id="resetpasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-sm" id="resetpasswordModal" tabindex="-1" role="dialog" aria-labelledby="resetpwdModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title translate" data-i18n="Reset Password" id="exampleModalLabel">Reset Password</h5>
+        <h5 class="modal-title translate" data-i18n="Reset Password" id="resetpwdModalLabel">Reset Password</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -129,10 +132,6 @@
     </div>
   </div>
 </div>
-<script src="resources/lib/url/url.min.js"></script>  
-<script src="resources/i18next.min.js" ></script>
-<script src="resources/jquery-i18next.min.js" ></script>
-<script src="resources/i18nextXHRBackend.js"></script>
-<script src="resources/global.js"></script>
+
 
  
