Partial implementation of supporting language profiles in the front-end - issue #24
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -70,13 +70,15 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 					    	<input type="password" name="signup-passwordverify" id="signup-passwordverify" class="form-control custom-input"   >
 				      		<label class= "custom-label translate" data-i18n="Re-enter Password" for="signup-passwordverify">Re-enter Password</label>
 					    </div>
-				    </div>
-				    
-				    
+				    </div>			    
 				    <div class="row custom-row">
 				      <textarea rows="3" name="signup-address" id="signup-address" class="form-control custom-input" form="signup-form" ></textarea>
 				      <label class= "custom-label translate" data-i18n="Organization Postal Address" for="signup-address">Organization Postal Address</label>
 				    </div>
+                    <div class="col-md-6 col-sm-12 custom-col">
+                        <input type="text" name="signup-language" id="signup-language" class="form-control custom-input"  >
+                        <label class= "custom-label translate" data-i18n="Language" for="signup-language">Language</label>
+                    </div>  				
 				    <div class="row">
 					    <div class="form-check">
 						    <input type="checkbox" name="approval-use-name-email" id="approval-use-name-email" class="form-check-input update-check-box" >
