--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -79,6 +79,10 @@
 			    <textarea rows="3" name="update-address" id="update-address" class="form-control custom-input" form="profile-form" required></textarea>
 			    <label class= "custom-label translate" data-i18n="Organization Postal Address" for="update-address">Organization Postal Address</label>
 			</div>
+            <div class="row">
+                <input type="text" class="form-control custom-input" name="update-language" id="update-language" required>
+                <label class= "custom-label translate" data-i18n="Language" for="update-language">Language</label>
+            </div>
 			<div class="row">
 			    <div class="form-check">
 					<input type="checkbox"  name="update-use-name-email" id="update-use-name-email" class="form-check-input update-check-box" >
