Update I18N implementation to synchronize the backend with the front-end language selection
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -20,11 +20,16 @@ Author(s): ViSolve 03/01/2019
 	<link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
-    <script src="resources/navbar.js"></script>
-    <script src="resources/admin.js"></script>
     <script src="resources/bootstrap.min.js"></script>
     <script src="resources/jquery.dataTables.min.js"></script>
     <script src="resources/dataTables.bootstrap4.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+	<script src="resources/i18next.min.js" ></script>
+	<script src="resources/jquery-i18next.min.js" ></script>
+	<script src="resources/i18nextXHRBackend.js"></script>
+	<script src="resources/global.js"></script>  
+    <script src="resources/navbar.js"></script>
+    <script src="resources/admin.js"></script> 
 </head>
 <body>
 	<!-- 001 Starts here -->
