--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -22,10 +22,14 @@ Author(s): ViSolve 03/01/2019
     <script src="resources/jquery.jui_dropdown.min.js"></script>
     <script src="resources/jquery.dataTables.min.js"></script>
     <script src="resources/dataTables.bootstrap4.min.js"></script>
+    <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+	<script src="resources/i18next.min.js" ></script>
+	<script src="resources/jquery-i18next.min.js" ></script>
+	<script src="resources/i18nextXHRBackend.js"></script>
+	<script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
     <script src="resources/certified.js"></script>
-    <script src="resources/bootstrap.min.js"></script>
-  	
 </head>
 <body>
    <div id="topnav"></div>
