--- a/WebContent/regcomplete.html
+++ b/WebContent/regcomplete.html
@@ -16,8 +16,13 @@
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/navbar.js"></script>
     <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+    <script src="resources/i18next.min.js" ></script>
+    <script src="resources/jquery-i18next.min.js" ></script>
+    <script src="resources/i18nextXHRBackend.js"></script>
+    <script src="resources/global.js"></script>   
+    <script src="resources/navbar.js"></script>
   </head>
   <body>
     <div id="topnav"></div>
