--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -23,8 +23,19 @@ Description: A new Responsive Template to receive the user inputs during Signup.
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/navbar.js"></script>
     <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+    <script src="resources/i18next.min.js" ></script>
+    <script src="resources/jquery-i18next.min.js" ></script>
+    <script src="resources/i18nextXHRBackend.js"></script>
+    <script src="resources/global.js"></script>   
+    <script src="resources/navbar.js"></script>
+    <script>
+    // Simple script to setup the languages dropdown list
+    $(document).ready( function() {
+    	$("#signup-language").html(getLanguageSelectionHtml());
+    } );
+    </script>
   </head>
   <body>
      <!-- 001 Starts here -->
@@ -76,8 +87,6 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 	                        <label class= "custom-label translate select-label" data-i18n="Language" for="signup-language">Language</label>
 	                        <select class="form-control custom-input" id="signup-language">
 						      <option selected class="translate" data-i18n="English" value="en">English (en)</option>
-						      <option class="translate" data-i18n="Russian" value="ru">Russian (ru)</option>
-						      <!-- To Do : Add languages  -->
 						    </select>
 	                    </div>
                     </div>
