--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -16,16 +16,19 @@ Author(s): ViSolve 03/01/2019
     <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
-<link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
+    <link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
 	<link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script> 
     <script src="resources/jquery.jui_dropdown.min.js"></script>
+    <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+    <script src="resources/i18next.min.js" ></script>
+    <script src="resources/jquery-i18next.min.js" ></script>
+    <script src="resources/i18nextXHRBackend.js"></script>
+    <script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
     <script src="resources/certsurvey.js"></script>
-    <script src="resources/bootstrap.min.js"></script>
-   
-   
 </head>
   <body>
     <!-- 001 Starts here -->
