--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,6 +23,11 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
     <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+	<script src="resources/i18next.min.js" ></script>
+	<script src="resources/jquery-i18next.min.js" ></script>
+	<script src="resources/i18nextXHRBackend.js"></script>
+	<script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
   </head>
   <body>
