--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -21,9 +21,15 @@ Description: A new Responsive Template for login
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
-    <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/navbar.js"></script>
+    <script src="resources/jquery.jui_dropdown.min.js"></script>  
     <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+    <script src="resources/i18next.min.js" ></script>
+    <script src="resources/jquery-i18next.min.js" ></script>
+    <script src="resources/i18nextXHRBackend.js"></script>
+    <script src="resources/global.js"></script>   
+    <script src="resources/certified.js"></script>
+    <script src="resources/navbar.js"></script>
   </head>
   <body>
   
