--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -21,9 +21,14 @@ Author(s): ViSolve 03/01/2019
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
+    <script src="resources/bootstrap.min.js"></script>
+    <script src="resources/lib/url/url.min.js"></script>  
+    <script src="resources/i18next.min.js" ></script>
+    <script src="resources/jquery-i18next.min.js" ></script>
+    <script src="resources/i18nextXHRBackend.js"></script>
+    <script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
     <script src="resources/pwreset.js"></script>
-    <script src="resources/bootstrap.min.js"></script>
   </head>
   <body>
   
