--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,8 +1,3 @@
-<script src="resources/lib/url/url.min.js"></script>  
-<script src="resources/i18next.min.js" ></script>
-<script src="resources/jquery-i18next.min.js" ></script>
-<script src="resources/i18nextXHRBackend.js"></script>
-<script src="resources/global.js"></script>   
 <link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
 <link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
 
@@ -25,9 +20,8 @@
 			    <div class="dropdown">
 				  <span class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-language language-setup" aria-hidden="true"></i></span>
 				  <div class="dropdown-menu dropdown-menu-right">
-				  	<ul class="language-setup-dropdown">
+				  	<ul class="language-setup-dropdown" id="language-dropdown_menu">
 					  	<li><a onclick="changeLng('en')" class="dropdown-item translate" data-i18n="English">English (en)</a></li>
-					  	<li><a onclick="changeLng('ru')" class ="dropdown-item translate" data-i18n="Russian">Russian (ru)</a></li>
 				  	</ul>
 			       </div>
 				</div> 
