--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -138,5 +138,10 @@
   </div>
 </div>
 
+<!-- Error Dialog -->
+
+<div class="modal fade bd-example-modal-sm" id="errors" tabindex="-1" role="dialog" aria-hidden="true">
+</div>
+
 
  
