String formatting and update questionnaire fix

--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -36,7 +36,7 @@ Author(s): ViSolve 03/01/2019
    <div class="container">
 	    <div id="TitleArea">
 	        <h1 class="translate" data-i18n="Conforming Organizations">Conforming Organizations</h1>
-	        <span class="translate" data-i18n="Conforming Organizations_content">The following organizations have self-certified conformance to the OpenChain</span> <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf" class="translate" data-i18n="Specification">Specification.</a>
+	        <span class="translate" data-i18n="[html]Conforming Organizations_content">The following organizations have self-certified conformance to the OpenChain</span> 
 	    </div>
         
 	    <div class="row mr-100">
