--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -106,7 +106,7 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 				    
 					    <div class="form-check">
 						    <input type="checkbox" name="read-terms" id="read-terms" class="form-check-input update-check-box" >
-						    <label class="form-check-label update-label checkbox-label"  for="read-terms"><span class="translate" data-i18n="Sign Up_content_2">I agree to the Linux Foundation </span>&nbsp;<a href="https://www.openchainproject.org/terms"><span class="Sign Up_content_2_T&C">  Terms of Use</span></a>&nbsp;<span class="translate" data-i18n="and"> and </span>&nbsp;<a href="https://www.openchainproject.org/privacy"><span class="translate" data-i18n="Privacy Policy" > Privacy Policy</span></a></label>
+						    <label class="form-check-label update-label checkbox-label"  for="read-terms"><span class="translate" data-i18n="[html]Sign Up_content_2"> </span></label>
 						</div>
 				    </div>
 				     <div class="row ">
