--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -1,16 +1,8 @@
 <div class="container">
 	<div id="support-email">
-	
 	</div>
 	<div id="copyright">
-	    <span class="translate" data-i18n="Please contact">Please contact </span>&nbsp;<a href="mailto:openchain-conformance@lists.linuxfoundation.org?Subject=OpenChain%20Certification%20Feedback" target="_top" class="translate" data-i18n="OpenChain Support">OpenChain Support</a>
-	    <span class="translate" data-i18n="report">to report any inaccuracies or issues.</span>
-	    <p> <span class="translate" data-i18n="footer_content">Copyright &copy; 2018 The Linux Foundation&reg;. All rights reserved. 
-	    The Linux Foundation has registered trademarks and uses trademarks. 
-	    For a list of trademarks of The Linux Foundation, please see our </span>
-	    <a href="https://www.linuxfoundation.org/trademark-usage" class="translate" data-i18n="Trademark Usage">Trademark Usage</a> <span class="translate" data-i18n="page">page. </span> 
-	    <span class="translate" data-i18n="linux">Linux is a registered trademark of Linus Torvalds. </span> <a href="https://www.openchainproject.org/privacy" class="translate" data-i18n="Privacy Policy">Privacy Policy</a> 
-	    <span class="translate" data-i18n="and">and</span>
-	     <a href="https://www.openchainproject.org/terms" class="translate" data-i18n="Terms of Use">Terms of Use</a> </p>    
+		<span class="translate" data-i18n="[html]Please contact"></span><br/>
+		<p><span class="translate" data-i18n="[html]footer_content"></span></p>
 	</div>
 </div>
