--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,7 +47,7 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <h2 class="sub-heading translate" data-i18n="Getting Started">Getting Started</h2>
 	    <p class="translate" data-i18n="Getting Started_content">Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:</p>
 	    <ul>
-	    <li> <span class="translate" data-i18n="Getting Started_content_1">Fulfill all requirements set forth in the </span> <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf" class="translate" data-i18n="Getting Started_content_1_sub">Specification.</a></li>
+	    <li><a class="translate"  data-i18n="[html]Getting Started_content_1" >Fulfill all requirements set forth in the</a></li>
 	    <li class="translate" data-i18n="Getting Started_content_2">Create an account by selecting sign-up in the user menu.
 	    <li class="translate" data-i18n="Getting Started_content_3">Name a contact person to handle inquiries.</li>
 	    <li class="translate" data-i18n="Getting Started_content_4">Have an authorized representative complete the web-based Online Self-Certification by answering all the questions.</li>
@@ -56,8 +56,8 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    </ul>
 	    </div>
 
-	    <p class="mr-100"> <span class="translate" data-i18n="offline-conformance-pdf">Do you prefer to work with a printed checklist? You can download the offline conformance handbook</span> 
-	    <a id="dwnquestionnaire" download class="translate" data-i18n="here">here</a>.</p>
+	    <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">Do you prefer to work with a printed checklist? You can download the offline conformance handbook</p>
+	    
 
 	    <div id="errors"></div>
 	    <div id="status"></div>
