Partial fix for issue #112 - update button works, but the dialog does not close
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -169,7 +169,7 @@ Author(s): ViSolve 03/01/2019
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-cancel translate" data-dismiss="modal" data-i18n="Cancel">Cancel</button>
-        <button type="button" class="btn btn-login translate" data-i18n="Update">Update</button>
+        <button id="reallyUpdateSurvey" type="button" class="btn btn-login translate" data-i18n="Update">Update</button>
       </div>
     </div>
   </div>
