error dialog fix

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -127,7 +127,7 @@ Author(s): ViSolve 03/01/2019
 				    </div>
 				    <div class="col-md-4 mr-30 d-flex justify-content-center">
 				      <div class="btn-group" role="group" aria-label="second group">
-				        <button id="btUpdateSurvey" type="button" class="btn btn-info mr-bt15 " data-toggle="modal" data-target="#UpdateSurveyModal"  ><i class="fa fa-refresh"></i> &nbsp;<span class="translate" data-i18n="Updated Questionnaire">Updated Questionnaire</span></button>
+				        <button id="btUpdateSurvey" type="button" class="btn btn-info mr-bt15 " data-toggle="modal" data-target="#UpdateSurveyModal"  ><i class="fa fa-refresh"></i> &nbsp;<span class="translate" data-i18n="Update questionnaire">Update questionnaire</span></button>
 				      </div>
 				    </div>
 				  </div>
@@ -148,7 +148,7 @@ Author(s): ViSolve 03/01/2019
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title translate" id="updatesurveyModalLabel" data-i18n="Update Questionnaire">Updated Questionnaire</h5>
+        <h5 class="modal-title translate" id="updatesurveyModalLabel" data-i18n="Confirm update">Confirm questionnaire Update</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -170,7 +170,7 @@ Author(s): ViSolve 03/01/2019
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-cancel translate" data-dismiss="modal" data-i18n="Cancel">Cancel</button>
-        <button type="button" class="btn btn-login translate" data-i18n="Update">Update</button>
+        <button id="reallyUpdateSurvey" type="button" class="btn btn-login translate" data-i18n="Update">Update</button>
       </div>
     </div>
   </div>
