--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -38,7 +38,7 @@ Author(s): ViSolve 03/01/2019
     
     	<div class="container">
 		    <div id="TitleArea">
-		        <h1 class="sub-heading transalte" data-i18n="Password Reset">Password Reset</h1>
+		        <h1 class="sub-heading translate" data-i18n="Password Reset">Password Reset</h1>
 		    </div>
 		    <!-- 002 starts here  -->
 		    <div class="form-group">
@@ -55,7 +55,8 @@ Author(s): ViSolve 03/01/2019
 					    </div>
 					    <div class="row">
 					      <input type="password" class="form-control custom-input" name="reset-pass-verify" id="reset-pass-verify" required>
-					      <label class= "custom-label translate" data-i18n="Re-Enter Password" for="reset-pass-verify">Re-Enter Password</label>
+					      <label class= "custom-label translate" data-i18n="Re-enter Password" for="reset-pass-verify">Re-Enter Password</label>
+
 					    </div>
 					     <div class="row">
 						     <div class="ui-dialog-buttonset">
