--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,6 +1,11 @@
 <link rel="icon" type="image/png"  href="images/favicon_openchain.png" />
 <link rel="shortcut icon" href="images/favicon_openchain.png" type="image/png"/>
-
+<script>
+$(document).ready( function() {
+	//Add languages dropdown for user profile
+	$("#update-language").html(getLanguageSelectionHtml());
+});
+</script>
 <nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
 	<div class="container container_padding ">
 	  <a class="navbar-brand openchain-logo append" href="index.html"><img src ="images/logo_openchain.png"></a>
@@ -72,8 +77,7 @@
 			<div class="row">
             
             	<label class= "custom-label translate select-label" data-i18n="Language" for="update-language">Language</label>
-	            <select class="form-control custom-input" name="update-language" id="update-language">
-			    </select>
+	            <select class="form-control custom-input" name="update-language" id="update-language"></select>
                 
             </div>
 			<div class="row">
