Resolve issue #139 - 500 error during password reset
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -43,7 +43,7 @@ Author(s): ViSolve 03/01/2019
 		    <!-- 002 starts here  -->
 		    <div class="form-group">
 				<div class="wrap" id="pwform">
-				    <form action="CertificationServlet" method="post">
+				    <form>
 				  		<p class="validateTips"></p>
 					    <div class="row">
 					      <input type="text" class="form-control custom-input" name="reset-username" id="reset-acc-username" required>
