added updated index.html
Suggested major update including a video gate.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,28 +37,29 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
   
     <div class="container">
 	    <div id="TitleArea">
-	        <h1 class="translate" data-i18n="title">OpenChain Self Certification</h1>
+	        <h1 class="translate" data-i18n="title">OpenChain Self-Certification Questionnaire</h1>
 	    </div>
 	    <div id="Introduction">
 	    <h2 class="sub-heading translate" data-i18n="welcome" >Welcome</h2>
-	    <p class="translate" data-i18n="welcome_content">The OpenChain Specification represents a core set of requirements a quality open source compliance program must satisfy. It fosters efficient and effective compliance of open source licenses across the supply chain. By self-certifying, participants are able to confirm they are in compliance with the Specification’s requirements.</p>
+	    <p class="translate" data-i18n="welcome_content">The OpenChain Specification identifies the key requirements of a quality open source compliance program. OpenChain Conformance allows organizations to show they meet these requirements. You can use this online questionnaire for free self-certification. You can also use this questionnaire for internal "health checks." Your progress and results are private until you choose to submit them for publication.</p>
 	    </div>
 	    <div id="GettingStarted" >
-	    <h2 class="sub-heading translate" data-i18n="Getting Started">Getting Started</h2>
-	    <p class="translate" data-i18n="Getting Started_content">Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:</p>
+	    <h2 class="sub-heading translate" data-i18n="Getting Started">Get Started</h2>
+	    <p class="translate" data-i18n="Getting Started_content">This online questionnaire contains a series of "yes" or "no" questions across various categories. Here is the process:</p>
 	    <ul>
-	    <li><a class="translate"  data-i18n="[html]Getting Started_content_1" >Fulfill all requirements set forth in the</a></li>
-	    <li class="translate" data-i18n="Getting Started_content_2">Create an account by selecting sign-up in the user menu.
-	    <li class="translate" data-i18n="Getting Started_content_3">Name a contact person to handle inquiries.</li>
-	    <li class="translate" data-i18n="Getting Started_content_4">Have an authorized representative complete the web-based Online Self-Certification by answering all the questions.</li>
-	    <li class="translate" data-i18n="Getting Started_content_5">Fill out the submission form.</li>
-	    <li class="translate" data-i18n="Getting Started_content_6">Archive a Reference Copy of all Verification Artifacts as a record in support of the Online Self-Certification.</li>
+	    <li class="translate" data-i18n="Getting Started_content_2">Sign-up to create an account.
+	    <li class="translate" data-i18n="Getting Started_content_4">Complete the questionnaire.</li>
+	    <li class="translate" data-i18n="Getting Started_content_6">Keep a record of how you met the requirements.</li>
 	    </ul>
 	    </div>
-
-	    <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">Do you prefer to work with a printed checklist? You can download the offline conformance handbook</p>
-	    
-
+	    <div id="Guide">
+	    <h2 class="sub-heading translate" data-i18n="welcome" >Learn More</h2>
+<p style="text-align:center"><iframe width="540" height="304" src="https://www.youtube.com/embed/Gk2_wJPSnI4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	    </div>
+	    <div id="PrintableGuide">
+	    <h2 class="sub-heading translate" data-i18n="welcome" >Printable Version</h2>
+	    <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">You can get the self-certification questionnaire in a printable and sharable format. You can download that <a href="https://openchain-project.github.io/conformance-questionnaire/questionnaire.pdf">here</a>.</p>
+	    </div>
 	    <div id="errors"></div>
 	    <div id="status"></div>
 	    <div id="resendveify"></div>
