Updated JSON (and index) to get translations lined up

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,17 +47,17 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <h2 class="sub-heading translate" data-i18n="Getting Started">Get Started</h2>
 	    <p class="translate" data-i18n="Getting Started_content">This online questionnaire contains a series of "yes" or "no" questions across various categories. Here is the process:</p>
 	    <ul>
-	    <li class="translate" data-i18n="Getting Started_content_2">Sign-up to create an account.
-	    <li class="translate" data-i18n="Getting Started_content_4">Complete the questionnaire.</li>
-	    <li class="translate" data-i18n="Getting Started_content_6">Keep a record of how you met the requirements.</li>
+	    <li class="translate" data-i18n="Getting Started_content_1">Sign-up to create an account.
+	    <li class="translate" data-i18n="Getting Started_content_2">Complete the questionnaire.</li>
+	    <li class="translate" data-i18n="Getting Started_content_3">Keep a record of how you met the requirements.</li>
 	    </ul>
 	    </div>
 	    <div id="Guide">
-	    <h2 class="sub-heading translate" data-i18n="welcome" >Learn More</h2>
-<p style="text-align:center"><iframe width="540" height="304" src="https://www.youtube.com/embed/Gk2_wJPSnI4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	    <h2 class="sub-heading translate" data-i18n="Learn More" >Learn More</h2>
+<p class="translate" data-i18n="Learn More_content" style="text-align:center"><iframe width="540" height="304" src="https://www.youtube.com/embed/Gk2_wJPSnI4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 	    </div>
 	    <div id="PrintableGuide">
-	    <h2 class="sub-heading translate" data-i18n="welcome" >Printable Version</h2>
+	    <h2 class="sub-heading translate" data-i18n="Printable Guide" >Printable Version</h2>
 	    <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">You can get the self-certification questionnaire in a printable and sharable format. You can download that <a href="https://openchain-project.github.io/conformance-questionnaire/questionnaire.pdf">here</a>.</p>
 	    </div>
 	    <div id="errors"></div>
